crates/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__schema_recovery_2.snap
---
source: parser/src/tests/error_recovery.rs
expression: "crate::tests::parsing_expr_string(r#\"s.0 {a=1}\"#)"
---
Node {
    node: Identifier(
        Identifier {
            names: [
                Node {
                    node: "s",
                    filename: "",
                    line: 1,
                    column: 0,
                    end_line: 1,
                    end_column: 1,
                },
                Node {
                    node: "",
                    filename: "",
                    line: 1,
                    column: 2,
                    end_line: 1,
                    end_column: 2,
                },
            ],
            pkgpath: "",
            ctx: Load,
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 2,
}

